--- a/index.html
+++ b/index.html
@@ -36,10 +36,28 @@
         </div>
 
 
-        <button onclick=" addProduct();" class="btn btn-outline-danger">add Product</button>
+        <button onclick=" addProduct();" class="btn btn-outline-success">add Product</button>
     </div>
 
 
+    <div class="container">
+
+        <table class="table table-striped  text-center ">
+
+            <thead>
+                <th scope="col">id</th>
+                <th scope="col">productName</th>
+                <th scope="col">productprice</th>
+                <th scope="col">productCategory</th>
+                <th scope="col">productDescription</th>
+                <th scope="col">update</th>
+                <th scope="col">delete</th>
+            </thead>
+
+            <tbody id='display'> </tbody>
+        </table>
+
+    </div>
     <script src="js/script.js"></script>
 </body>
 
