--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <div class="container">
 
+        <input onkeyup="searcProducts(this.value);" placeholder="searchProducts" class="form-control w-75 mx-auto my-5" type="text">
         <table class="table table-striped  text-center ">
 
             <thead>
