--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
         <div class="form-group">
             <label for="productNameInput">productName : </label>
-            <input class="form-control" type="text" id="productNameInput">
+            <input class=" form-control" type="text" id="productNameInput">
+        </div>
+
+        <div id="userNameAlert" class="d-none alert alert-danger">
+            <p>userName must be start with upperCase and number of characters must be from 3 to 8 </p>
         </div>
 
         <div class="form-group">
